# 3DFractals

./: .gitignore  CMakeLists.txt  build-and-run.ps1  build.ps1  clean.ps1  debug.ps1
include/: Camera.h  GameObject.h  Geometry.h  Material.h  PerspectiveCamera.h  Scene.h  Shader.h  Texture.h  Triangle.h  UniformProvider.h
shaders/: fragment.glsl  vertex.glsl
src/: Triangle.cpp  main.cpp
src/engine/: Camera.cpp  GameObject.cpp  Geometry.cpp  Material.cpp  PerspectiveCamera.cpp  Scene.cpp  Shader.cpp  Texture.cpp
